--- a/Practica 1/src/aplication/casa/página.de.inicio.html
+++ b/Practica 1/src/aplication/casa/página.de.inicio.html
@@ -15,7 +15,7 @@
   </ion-header>
 
   <div id="container">
-    <strong>2080138 te saluda</strong>
+    <strong>Hola Mundo-2021455</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
